kubernetes/network-policies/observability/allow-kube-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-kube-api
  namespace: observability

spec:
  podSelector: {}

  policyTypes:
    - Egress

  egress:
    - to:
        - ipBlock:
            cidr: 10.96.0.1/32

      ports:
        - protocol: TCP
          port: 443
