kubernetes/network-policies/observability/allow-loki-ingestion.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-loki-ingestion
  namespace: observability

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: loki

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector: {}
