kubernetes/network-policies/observability/allow-observability-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-observability-ingress
  namespace: observability

spec:
  podSelector: {}

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: platform
