kubernetes/network-policies/observability/allow-otel-collector.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-otel-collector
  namespace: observability

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: opentelemetry-collector

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector: {}

  egress:
    - to:
        - namespaceSelector: {}
