kubernetes/network-policies/observability/allow-prometheus-scrape.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-prometheus-scrape
  namespace: observability

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector: {}

  egress:
    - {}
